NEWS, README: updated version numbers for the upcoming 2010.06.04 release

--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2010.06.04 (2010-06-04) [beta]
 
   The Autoconf Archive has been declared an official GNU project. Consequently,
   the web site has moved from <http://www.nongnu.org/autoconf-archive/> to
