bootstrap.sh: disable 'sc_error_message_uppercase' QA test from gnulib
The test fails here:

 m4/ax_cxx_verbose_terminate_handler.m4:46:      [throw std::runtime_error("Test of unhandled exception AABBCCDDEE");])],

--- a/TODO
+++ b/TODO
@@ -57,6 +57,7 @@
   * [ ] sc_useless_cpp_parens
   * [ ] sc_prohibit_magic_number_exit
   * [ ] sc_copyright_check
+  * [ ] sc_error_message_uppercase
 
 * TODO Generate serial lines automatically
 
