--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
 * Noteworthy changes in release 2010.06.04 (2010-06-04) [beta]
 
   The Autoconf Archive has been declared an official GNU project. Consequently,
