--- a/README
+++ b/README
@@ -70,9 +70,9 @@ GNU Autoconf Archive. If not, see <http://www.gnu.org/licenses/>.
 .. References
 .. ..........
 ..
-.. _autoconf-archive-2010.06.04.tar.gz : http://download.savannah.gnu.org/releases/autoconf-archive/autoconf-archive-2010.06.04.tar.gz
-.. _autoconf-archive-2010.06.04.tar.bz2: http://download.savannah.gnu.org/releases/autoconf-archive/autoconf-archive-2010.06.04.tar.bz2
-.. _autoconf-archive-2010.06.04.tar.xz:  http://download.savannah.gnu.org/releases/autoconf-archive/autoconf-archive-2010.06.04.tar.xz
-.. _autoconf-archive-2010.06.04.tar.gz.sig:  http://download.savannah.gnu.org/releases/autoconf-archive/autoconf-archive-2010.06.04.tar.gz.sig
-.. _autoconf-archive-2010.06.04.tar.bz2.sig: http://download.savannah.gnu.org/releases/autoconf-archive/autoconf-archive-2010.06.04.tar.bz2.sig
-.. _autoconf-archive-2010.06.04.tar.xz.sig:  http://download.savannah.gnu.org/releases/autoconf-archive/autoconf-archive-2010.06.04.tar.xz.sig
+.. _autoconf-archive-2010.06.04.tar.gz : http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2010.06.04.tar.gz
+.. _autoconf-archive-2010.06.04.tar.bz2: http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2010.06.04.tar.bz2
+.. _autoconf-archive-2010.06.04.tar.xz:  http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2010.06.04.tar.xz
+.. _autoconf-archive-2010.06.04.tar.gz.sig:  http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2010.06.04.tar.gz.sig
+.. _autoconf-archive-2010.06.04.tar.bz2.sig: http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2010.06.04.tar.bz2.sig
+.. _autoconf-archive-2010.06.04.tar.xz.sig:  http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2010.06.04.tar.xz.sig
