README: fixed broken ReST mark-up

--- a/README
+++ b/README
@@ -17,9 +17,9 @@ having this tool available as widely as possible outweigh the disadvantage that
 some authors may choose to use it, too, for proprietary software.
 
 The best place to start exploring the Archive is the `on-line documentation
-<http://www.gnu.org/software/autoconf-archive/>`_. There is also the `GNU
-Autoconf Archive home page <http://savannah.gnu.org/projects/autoconf-archive/>
-at Savannah`_.
+<http://www.gnu.org/software/autoconf-archive/>`_. There is also the `Autoconf
+Archive home page <http://savannah.gnu.org/projects/autoconf-archive/>`_ at
+Savannah.
 
 Downloads
 ---------
