--- a/NEWS
+++ b/NEWS
@@ -12,7 +12,8 @@
 
   The boost macros for iostreams, regex, serialization, signals, system,
   test_exec_monitor, unit_test_framework, wave, and wserialization have been
-  patched not to rely on being executed by a 'bash' shell.
+  patched not to rely on being executed by a 'bash' shell. Also, an
+  under-quoted shell variable has been fixed in AX_BOOST_BASE.
 
 * Noteworthy changes in release 2010.07.06 (2010-07-06) [stable]
 
