--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_TLS has been updated to usual FOUND/NOT-FOUND interface.
+
   Handling of indirectly named shell variables has been fixed in
   AX_CFLAGS_GCC_OPTION. There have also been improvements to the
   documentation. See <http://savannah.gnu.org/patch/?7291> and
