--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,11 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-  The new macro AX_CHECK_LIBRARY has been added.
+  The new macro AX_LIB_CGAL_CORE has been added. Further details are available
+  at <http://savannah.gnu.org/patch/?7370>.
+
+  The new macro AX_CHECK_LIBRARY has been added. Further details are available
+  at <http://savannah.gnu.org/patch/?7363>.
 
   AX_JNI_INCLUDE_DIR has been fixed to work correctly on MacOS X 10.6.4, where
   the header <jni.h> is a symbolic link. Further details are available at
